exports[`test should render a default component 1`] = `
<div
  className="content-container">
  <div
    className="header" />
  <div
    className="main">
    <div
      className="normalizer" />
  </div>
</div>
`;

exports[`test should render a header 1`] = `
<div
  className="content-container">
  <div
    className="header">
    <p>
      Header
    </p>
  </div>
  <div
    className="main">
    <div
      className="normalizer" />
  </div>
</div>
`;

exports[`test should render as fill 1`] = `
<div
  className="content-container fill">
  <div
    className="header" />
  <div
    className="main">
    <div
      className="normalizer" />
  </div>
</div>
`;

exports[`test should render content 1`] = `
<div
  className="content-container">
  <div
    className="header" />
  <div
    className="main">
    <div
      className="normalizer">
      <p>
        test content
      </p>
    </div>
  </div>
</div>
`;
